# CarDealershipRUST

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml
assets/: cars_for_sale.json
database/: create.sql  customer.json  salesperson.json
src/: main.rs  models.rs  schema.rs
src/handlers/: mod.rs  salesperson.rs
