[package]
name = "car_dealership"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
chrono = { version = "0.4.24", features = ["serde"] }
diesel = { version = "2.0.3", features = ["mysql", "postgres", "r2d2", "chrono"] }
serde = { version = "1.0.159", features = ["derive"] }
